--- a/notebooks/Step1_Protein_Cartography_Metadata_Analysis.ipynb
+++ b/notebooks/Step1_Protein_Cartography_Metadata_Analysis.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "**Notebook summary**\n",
     "In this Jupyter Notebook:\n",
-    "- We visualize and analyse specific results from selected clusters from the ProteinCartography output of Fungal Divergent Actin (FDA) representative sequences.\n",
-    "- It is associated with Step 1 of the Pub approach: Expanding the initial set of fungal species that possess FDA\n",
+    "- We visualize and analyse specific results from selected clusters from the ProteinCartography output of Divergent Fungal Actin (DFA) representative sequences.\n",
+    "- It is associated with Step 1 of the Pub approach: Expanding the initial set of fungal species that possess DFA\n",
     "- We provide the codes for the Pub Figures 3C and 3E\n",
-    "- Generate .csv file with metadata information for FDA clusters LC04 and LC11\n",
+    "- Generate .csv file with metadata information for DFA clusters LC04 and LC11\n",
     "\n",
     "**Context/Goal reminder**\n",
-    "Fungal Divergent Actins (FDAs) have been identified through a first run of ProteinCartography using human actin as the input. From this initial search, one well defined cluster of 292 proteins stood out and mainly contained divergent actin from fungal species. Here, we have seeded a new ProteinCartography run with 6 representative sequences of the FDA cluster identified in the human-actin search. The objective of this run of ProteinCartography is to identify if we can extend this cluster and find similar FDA more broadly and obtain a more defined set of species where these FDA are found. \n",
+    "Divergent Fungal Actins (DFAs) have been identified through a first run of ProteinCartography using human actin as the input. From this initial search, one well defined cluster of 292 proteins stood out and mainly contained divergent actin from fungal species. Here, we have seeded a new ProteinCartography run with 6 representative sequences of the DFA cluster identified in the human-actin search. The objective of this run of ProteinCartography is to identify if we can extend this cluster and find similar DFAs more broadly and obtain a more defined set of species where these DFAs are found. \n",
     "\n",
     "**Notebook purpose**\n",
     "The ProteinCartography run generated 17 clusters, among them 8 are well defined clusters. In this notebook, we first visualize the distribution of different metadata for these 8 clusters. We visulaize:\n",
@@ -294,7 +294,7 @@
    "id": "fa289d0c",
    "metadata": {},
    "source": [
-    "### Subset and export of information for clusters containing FDA (LC04 and LC11)"
+    "### Subset and export of information for clusters containing DFA (LC04 and LC11)"
    ]
   },
   {
@@ -447,7 +447,7 @@
    },
    "outputs": [],
    "source": [
-    "write.csv(data_goodC,'results/step1/Protein_Cartography_output_FDAclusters.csv')"
+    "write.csv(data_goodC,'results/step1/Protein_Cartography_output_DFAclusters.csv')"
    ]
   },
   {
